# pc_test

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  geminicomment.md  keymap.md  nbi.manifest  nbi.rc  plan.md  report.md  skill.md  vcpkg.json
common/: CMakeLists.txt  types.hpp
core/: CMakeLists.txt  audio_manager.cpp  audio_manager.hpp  auto_scan.cpp  auto_scan.hpp  battery_manager.cpp  battery_manager.hpp  network_manager.cpp  network_manager.hpp  scorer.cpp  scorer.hpp  storage_manager.cpp  storage_manager.hpp  thermal_manager.cpp  thermal_manager.hpp
gui/: CMakeLists.txt  audio_view.cpp  audio_view.hpp  audio_window.cpp  audio_window.hpp  battery_view.cpp  battery_view.hpp  battery_window.cpp  battery_window.hpp  gesture_test_widget.cpp  gesture_test_widget.hpp  keyboard_view.cpp  keyboard_view.hpp  keyboard_window.cpp  keyboard_window.hpp  main.cpp  main_dashboard.cpp  main_dashboard.hpp  mic_view.cpp  mic_view.hpp  mic_window.cpp  mic_window.hpp  network_view.cpp  network_view.hpp  network_window.cpp  network_window.hpp  physical_checklist_view.cpp  physical_checklist_view.hpp  physical_checklist_window.cpp  physical_checklist_window.hpp  ports_view.cpp  ports_view.hpp  ports_window.cpp  ports_window.hpp  report_generator.cpp  report_generator.hpp  screen_test_view.cpp  screen_test_view.hpp  screen_window.cpp  screen_window.hpp  (+18 more)
gui/resources/: nbi.qrc
resources/: manifest.xml
resources/keyboard_layouts/: en_standard.json  en_tkl.json
